main/default/objects/Compass_Capture__c/Compass_Capture__c.object-meta.xml
<CustomObject>
    <label>Compass Capture</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Capture ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compass Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>