main/default/objects/Compass_Capture__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compass Capture</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>