main/default/objects/Compass_Capture__c/fields/Aligned_CM_Staff_1__c.field-meta.xml
<CustomField>
    <fullName>Aligned_CM_Staff_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aligned CM Staff 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Aligned CM Staff 1)</relationshipLabel>
    <relationshipName>Compass_Capture2</relationshipName>
    <type>Lookup</type>
</CustomField>