main/default/objects/Compass_Capture__c/fields/Aligned_CM_Staff_2__c.field-meta.xml
<CustomField>
    <fullName>Aligned_CM_Staff_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aligned CM Staff 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Aligned CM Staff 2)</relationshipLabel>
    <relationshipName>Compass_Capture3</relationshipName>
    <type>Lookup</type>
</CustomField>