main/default/objects/Compass_Capture__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Assignee)</relationshipLabel>
    <relationshipName>Compass_Capture4</relationshipName>
    <type>Lookup</type>
</CustomField>