main/default/objects/Compass_Capture__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>