main/default/objects/Compass_Capture__c/fields/Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number__c</fullName>
    <label>Business Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>