main/default/objects/Compass_Capture__c/fields/Business_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Street_Address__c</fullName>
    <label>Business Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>