main/default/objects/Compass_Capture__c/fields/Business_Street_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Street_Address_Line_2__c</fullName>
    <label>Business Street Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>