main/default/objects/Compass_Capture__c/fields/Capture_Category__c.field-meta.xml
<CustomField>
    <fullName>Capture_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Compass Capture (Capture Category)</relationshipLabel>
    <relationshipName>Capture_Category</relationshipName>
    <type>Lookup</type>
</CustomField>