main/default/objects/Compass_Capture__c/fields/Capture_Description__c.field-meta.xml
<CustomField>
    <fullName>Capture_Description__c</fullName>
    <label>Capture Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>