main/default/objects/Compass_Capture__c/fields/Capture_Title__c.field-meta.xml
<CustomField>
    <fullName>Capture_Title__c</fullName>
    <label>Capture Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>