main/default/objects/Compass_Capture__c/fields/Category_Value__c.field-meta.xml
<CustomField>
    <fullName>Category_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Value</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Category__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Category Value)</relationshipLabel>
    <relationshipName>Category_Value</relationshipName>
    <type>Lookup</type>
</CustomField>