main/default/objects/Compass_Capture__c/fields/CCN_Journey__c.field-meta.xml
<CustomField>
    <fullName>CCN_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCN Journey:</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Compass Capture</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>