main/default/objects/Compass_Capture__c/fields/Change_Impact__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact__c</fullName>
    <label>Change Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>