main/default/objects/Compass_Capture__c/fields/Client_Capture__c.field-meta.xml
<CustomField>
    <fullName>Client_Capture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Client Capture</description>
    <label>Client Capture</label>
    <referenceTo>Client_Capture__c</referenceTo>
    <relationshipLabel>Compass Capture</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>