main/default/objects/Compass_Capture__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <label>Owning Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>