main/default/objects/Compass_Capture__c/fields/Coordinator_contact__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_contact__c</fullName>
    <formula>Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>