main/default/objects/Compass_Capture__c/fields/Cross_Functional__c.field-meta.xml
<CustomField>
    <fullName>Cross_Functional__c</fullName>
    <label>Cross Functional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>