main/default/objects/Compass_Capture__c/fields/Current_Process_State_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Process_State_Email__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>