main/default/objects/Compass_Capture__c/fields/Current_State_Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Process_Definition__c</fullName>
    <label>Current State Process Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>