main/default/objects/Compass_Capture__c/fields/Current_State_Process_Executor__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Process_Executor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current State Process Executor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compass_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>