main/default/objects/Compass_Capture__c/fields/Current_State_Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current State Process Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Current State Process Owner)</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>