main/default/objects/Compass_Capture__c/fields/Date_Identified__c.field-meta.xml
<CustomField>
    <fullName>Date_Identified__c</fullName>
    <label>Date Identified</label>
    <type>Date</type>
</CustomField>