main/default/objects/Compass_Capture__c/fields/Discovery_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Session_Date__c</fullName>
    <label>Discovery Session Date</label>
    <type>Date</type>
</CustomField>