main/default/objects/Compass_Capture__c/fields/Discovery_Session_Question_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Session_Question_Comments__c</fullName>
    <label>Discovery Session Question/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>