main/default/objects/Compass_Capture__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Person Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>