main/default/objects/Compass_Capture__c/fields/Entity_L2__c.field-meta.xml
<CustomField>
    <fullName>Entity_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension - L2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Compass Capture (Entity - L2)</relationshipLabel>
    <relationshipName>Entity_L2</relationshipName>
    <type>Lookup</type>
</CustomField>