main/default/objects/Compass_Capture__c/fields/Entity_Value_L1__c.field-meta.xml
<CustomField>
    <fullName>Entity_Value_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension Value - L1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Entity_L1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Entity Value - L1)</relationshipLabel>
    <relationshipName>Entity_Value_L1</relationshipName>
    <type>Lookup</type>
</CustomField>