main/default/objects/Compass_Capture__c/fields/Facility_or_Department_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_or_Department_Description__c</fullName>
    <label>Facility or Department Description</label>
    <type>TextArea</type>
</CustomField>