main/default/objects/Compass_Capture__c/fields/Facility_or_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_or_Department_Name__c</fullName>
    <label>Facility or Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>