main/default/objects/Compass_Capture__c/fields/Final_Fit_Gap__c.field-meta.xml
<CustomField>
    <fullName>Final_Fit_Gap__c</fullName>
    <label>Final Fit-Gap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fit</fullName>
            </value>
            <value>
                <fullName>Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>