main/default/objects/Compass_Capture__c/fields/For_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>For_Follow_Up__c</fullName>
    <label>For Follow Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>