main/default/objects/Compass_Capture__c/fields/Functional_Clinical_Area_Value__c.field-meta.xml
<CustomField>
    <fullName>Functional_Clinical_Area_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional/Clinical Area Value</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Functional_Clinical_Area__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Functional/Clinical Area Value)</relationshipLabel>
    <relationshipName>Functional_Clinical_Area_Value</relationshipName>
    <type>Lookup</type>
</CustomField>