main/default/objects/Compass_Capture__c/fields/Future_State_Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>Future_State_Process_Definition__c</fullName>
    <label>Future State Process Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>