main/default/objects/Compass_Capture__c/fields/Future_State_Process_Executor__c.field-meta.xml
<CustomField>
    <fullName>Future_State_Process_Executor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future State Process Executor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compass_Captures2</relationshipName>
    <type>Lookup</type>
</CustomField>