main/default/objects/Compass_Capture__c/fields/Future_State_Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Future_State_Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future State Process Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compass_Captures1</relationshipName>
    <type>Lookup</type>
</CustomField>