main/default/objects/Compass_Capture__c/fields/Future_State_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Future_State_Rationale__c</fullName>
    <label>Future State Rationale</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>