main/default/objects/Compass_Capture__c/fields/How__c.field-meta.xml
<CustomField>
    <fullName>How__c</fullName>
    <label>How</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>