main/default/objects/Compass_Capture__c/fields/How_is_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>How_is_Requirements_Met__c</fullName>
    <label>How is Requirement Met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Report</fullName>
            </value>
            <value>
                <fullName>Delivered Business Process</fullName>
            </value>
            <value>
                <fullName>Delivered Functionality</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>