main/default/objects/Compass_Capture__c/fields/In_CSR__c.field-meta.xml
<CustomField>
    <fullName>In_CSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In CSR?</label>
    <type>Checkbox</type>
</CustomField>