main/default/objects/Compass_Capture__c/fields/In_WS__c.field-meta.xml
<CustomField>
    <fullName>In_WS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In WS?</label>
    <type>Checkbox</type>
</CustomField>