main/default/objects/Compass_Capture__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <label>Links</label>
    <type>TextArea</type>
</CustomField>