main/default/objects/Compass_Capture__c/fields/Mitigation_Measures__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Measures__c</fullName>
    <label>Mitigation Measures</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>