main/default/objects/Compass_Capture__c/fields/Multi_Session_Event__c.field-meta.xml
<CustomField>
    <fullName>Multi_Session_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Session Event?</label>
    <type>Checkbox</type>
</CustomField>