main/default/objects/Compass_Capture__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Name)</relationshipLabel>
    <relationshipName>Compass_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>