main/default/objects/Compass_Capture__c/fields/Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Name_Description__c</fullName>
    <label>Name – Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>