main/default/objects/Compass_Capture__c/fields/Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Name_Display__c</fullName>
    <label>Name – Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>