main/default/objects/Compass_Capture__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Compass Capture (Network)</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>