main/default/objects/Compass_Capture__c/fields/Network_Value__c.field-meta.xml
<CustomField>
    <fullName>Network_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network Value</label>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Network Value)</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>