main/default/objects/Compass_Capture__c/fields/No_of_FTEs__c.field-meta.xml
<CustomField>
    <fullName>No_of_FTEs__c</fullName>
    <label># of FTEs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>