main/default/objects/Compass_Capture__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>