main/default/objects/Compass_Capture__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Owner)</relationshipLabel>
    <relationshipName>Compass_Capture5</relationshipName>
    <type>Lookup</type>
</CustomField>