main/default/objects/Compass_Capture__c/fields/Percent_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completion__c</fullName>
    <label>Percent Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>