main/default/objects/Compass_Capture__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>