main/default/objects/Compass_Capture__c/fields/Planned_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Go_Live_Date__c</fullName>
    <formula>Campaign__r.Planned_Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Go-Live Date</label>
    <type>Date</type>
</CustomField>