main/default/objects/Compass_Capture__c/fields/POC_1__c.field-meta.xml
<CustomField>
    <fullName>POC_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compass_Captures3</relationshipName>
    <type>Lookup</type>
</CustomField>