main/default/objects/Compass_Capture__c/fields/POC_2__c.field-meta.xml
<CustomField>
    <fullName>POC_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compass_Captures4</relationshipName>
    <type>Lookup</type>
</CustomField>