main/default/objects/Compass_Capture__c/fields/Problem_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Problem_Recurrence__c</fullName>
    <label>Problem Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>