main/default/objects/Compass_Capture__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Product)</relationshipLabel>
    <relationshipName>Compass_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>