main/default/objects/Compass_Capture__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Capture (Product Owner)</relationshipLabel>
    <relationshipName>Compass_Capture7</relationshipName>
    <type>Lookup</type>
</CustomField>