main/default/objects/Compass_Capture__c/fields/RCA_Author__c.field-meta.xml
<CustomField>
    <fullName>RCA_Author__c</fullName>
    <formula>Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCA Author</label>
    <type>Text</type>
</CustomField>