main/default/objects/Compass_Capture__c/fields/Reference_Object_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_1__c</fullName>
    <label>Reference Object 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>