main/default/objects/Compass_Capture__c/fields/Referred_to_Community__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred to Community</label>
    <type>Checkbox</type>
</CustomField>