main/default/objects/Compass_Capture__c/fields/Related_Services__c.field-meta.xml
<CustomField>
    <fullName>Related_Services__c</fullName>
    <label>Related Services</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>