main/default/objects/Compass_Capture__c/fields/Report_Action_Service_Role__c.field-meta.xml
<CustomField>
    <fullName>Report_Action_Service_Role__c</fullName>
    <formula>IF(In_CSR__c, &apos;CSR&apos;,  IF(In_WS__c, &apos;WS&apos;,  IF( ISBLANK(Current_Process_State_Email__c) , &apos;Missing&apos;, &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Action Service Role</label>
    <type>Text</type>
</CustomField>