main/default/objects/Compass_Capture__c/fields/Report_Actions_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Report_Actions_Service_Line__c</fullName>
    <formula>IF(In_House__c, &apos;Available&apos;, IF(Referred_to_Community__c, &apos;Referred to Community&apos;,  IF( AND(In_House__c,Referred_to_Community__c) , &apos;Not Offered&apos;,  IF(ISBLANK( Current_Process_State_Email__c), &apos;Missing Validation&apos;, &apos;&apos;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Actions Service Line</label>
    <type>Text</type>
</CustomField>