main/default/objects/Compass_Capture__c/fields/Report_Chief_Missing_Available_or_Referr__c.field-meta.xml
<CustomField>
    <fullName>Report_Chief_Missing_Available_or_Referr__c</fullName>
    <formula>IF( Referred_to_Community__c , &apos;Referred to Community&apos;,  IF( In_House__c , &apos;Available&apos;, &apos;Not Offered&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Chief Missing Available or Referr</label>
    <type>Text</type>
</CustomField>