main/default/objects/Compass_Capture__c/fields/Report_Owner_Email_With_or_Without__c.field-meta.xml
<CustomField>
    <fullName>Report_Owner_Email_With_or_Without__c</fullName>
    <formula>IF(ISBLANK(Current_Process_State_Email__c), &apos;Missing&apos;, &apos;With Email&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Owner Email With or Without</label>
    <type>Text</type>
</CustomField>