main/default/objects/Compass_Capture__c/fields/Report_Site_Role_Has_Updates__c.field-meta.xml
<CustomField>
    <fullName>Report_Site_Role_Has_Updates__c</fullName>
    <formula>IF(AND(In_CSR__c, NOT( ISBLANK( Current_Process_State_Email__c ))), &apos;Attending CSR Update&apos;, IF( AND( In_WS__c, NOT( ISBLANK( Current_Process_State_Email__c ))) , &apos;Attending WS Update&apos;,  IF(AND(OR(In_WS__c,In_CSR__c), ISBLANK( Current_Process_State_Email__c )) , &apos;Email Address Update&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Site Role Has Updates</label>
    <type>Text</type>
</CustomField>