main/default/objects/Compass_Capture__c/fields/Root_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Category</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Compass Capture (Root Category)</relationshipLabel>
    <relationshipName>Compass_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>