main/default/objects/Compass_Capture__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>